--- a/.github/workflows/destroy_codeon_aws.yml
+++ b/.github/workflows/destroy_codeon_aws.yml
@@ -31,9 +31,9 @@ permissions:
   contents: read
 
 env:
-  CLUSTER_NAME: "vanillatstodo-cluster"
-  AWS_REGION: "us-east-2"
-  APP_NAME: "vanillatstodo"
+  CLUSTER_NAME: ${{ vars.CLUSTER_NAME || 'vanillatstodo-cluster' }}
+  AWS_REGION: ${{ vars.AWS_REGION || 'us-east-2' }}
+  APP_NAME: ${{ vars.APP_NAME || 'vanillatstodo' }}
   ENVIRONMENT: ${{ github.event.inputs.environment }}
 
 jobs:
@@ -44,10 +44,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Load Environment Variables
-        run: |
-          cat .github/variables/environment.env >> $GITHUB_ENV
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
