--- a/.github/workflows/deploy_codeto_aws.yml
+++ b/.github/workflows/deploy_codeto_aws.yml
@@ -10,9 +10,9 @@ on:
         default: "experimental"
         type: choice
         options:
-          - staging
-          - production
-          - experimental
+        - staging
+        - production
+        - experimental
 
 permissions:
   id-token: write
@@ -36,215 +36,214 @@ jobs:
       url: ${{ env.SERVICE_URL }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set Dynamic Variables
-        run: |
-          # Use stable tag for testing (change this for production)
-          DOCKER_TAG="${{ vars.DOCKER_TAG || '0.0.1' }}"
-          echo "DOCKER_TAG=${DOCKER_TAG}" >> $GITHUB_ENV
-          echo "FULL_DOCKER_IMAGE=${{ vars.DOCKER_REPOSITORY || 'hftamayo/vanillatstodo' }}:${DOCKER_TAG}" >> $GITHUB_ENV
+    - name: Set Dynamic Variables
+      run: |
+        # Use stable tag for testing (change this for production)
+        DOCKER_TAG="${{ vars.DOCKER_TAG || '0.0.1' }}"
+        echo "DOCKER_TAG=${DOCKER_TAG}" >> $GITHUB_ENV
+        echo "FULL_DOCKER_IMAGE=${{ vars.DOCKER_REPOSITORY || 'hftamayo/vanillatstodo' }}:${DOCKER_TAG}" >> $GITHUB_ENV
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
 
-      - name: Install kubectl
-        run: |
-          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-          chmod +x kubectl
-          sudo mv kubectl /usr/local/bin/
+    - name: Install kubectl
+      run: |
+        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        chmod +x kubectl
+        sudo mv kubectl /usr/local/bin/
 
-      - name: Install Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: "3.12.3"
+    - name: Install Helm
+      uses: azure/setup-helm@v3
+      with:
+        version: "3.12.3"
 
-      - name: Verify EKS Cluster
-        run: |
-          echo "🔍 Verifying EKS cluster..."
-          if ! aws eks describe-cluster --name ${{ env.CLUSTER_NAME }} >/dev/null 2>&1; then
-            echo "❌ EKS cluster not found!"
-            exit 1
-          fi
-          echo "✅ EKS cluster verified"
+    - name: Verify EKS Cluster
+      run: |
+        echo "🔍 Verifying EKS cluster..."
+        if ! aws eks describe-cluster --name ${{ env.CLUSTER_NAME }} >/dev/null 2>&1; then
+          echo "❌ EKS cluster not found!"
+          exit 1
+        fi
+        echo "✅ EKS cluster verified"
 
-          # Store cluster endpoint for later use
-          if [ -n "${{ github.event.client_payload.cluster_endpoint }}" ]; then
-            CLUSTER_ENDPOINT="${{ github.event.client_payload.cluster_endpoint }}"
-          else
-            CLUSTER_ENDPOINT=$(aws eks describe-cluster --name ${{ env.CLUSTER_NAME }} --query "cluster.endpoint" --output text)
-          fi
-          echo "CLUSTER_ENDPOINT=${CLUSTER_ENDPOINT}" >> $GITHUB_ENV
+        # Store cluster endpoint for later use
+        if [ -n "${{ github.event.client_payload.cluster_endpoint }}" ]; then
+          CLUSTER_ENDPOINT="${{ github.event.client_payload.cluster_endpoint }}"
+        else
+          CLUSTER_ENDPOINT=$(aws eks describe-cluster --name ${{ env.CLUSTER_NAME }} --query "cluster.endpoint" --output text)
+        fi
+        echo "CLUSTER_ENDPOINT=${CLUSTER_ENDPOINT}" >> $GITHUB_ENV
 
-      - name: Update kubeconfig
-        run: |
-          aws eks update-kubeconfig \
-            --name ${{ env.CLUSTER_NAME }} \
-            --region ${{ env.AWS_REGION }}
+    - name: Update kubeconfig
+      run: |
+        aws eks update-kubeconfig \
+          --name ${{ env.CLUSTER_NAME }} \
+          --region ${{ env.AWS_REGION }}
 
-      - name: Verify Cluster Health
-        run: |
-          echo "🔍 Checking cluster health..."
-          echo "📊 Cluster Info:"
-          kubectl cluster-info
+    - name: Verify Cluster Health
+      run: |
+        echo "🔍 Checking cluster health..."
+        echo "📊 Cluster Info:"
+        kubectl cluster-info
+        echo ""
+        echo "📊 Node Status:"
+        kubectl get nodes -o wide || echo "❌ No nodes found!"
+        echo ""
+        echo "📊 Node Groups (AWS):"
+        # List all nodegroups instead of hardcoding 'workers'
+        NODEGROUPS=$(aws eks list-nodegroups --cluster-name ${{ env.CLUSTER_NAME }} --query "nodegroups[0]" --output text 2>/dev/null || echo "")
+        if [ -n "$NODEGROUPS" ] && [ "$NODEGROUPS" != "None" ]; then
+          aws eks describe-nodegroup --cluster-name ${{ env.CLUSTER_NAME }} --nodegroup-name $NODEGROUPS || echo "❌ Nodegroup details unavailable!"
+        else
+          echo "❌ No nodegroups found!"
+        fi
+        echo ""
+
+    - name: Save Current Deployment
+      run: |
+        if helm status ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} &>/dev/null; then
+          echo "📦 Saving current Helm release state..."
+          helm get values ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} > previous_values.yaml
+          echo "PREVIOUS_RELEASE_EXISTS=true" >> $GITHUB_ENV
+        else
+          echo "ℹ️ No existing Helm release found"
+          echo "PREVIOUS_RELEASE_EXISTS=false" >> $GITHUB_ENV
+        fi
+
+    - name: Create Docker Hub Secret
+      run: |
+        echo "🔐 Setting up Docker credentials..."
+        kubectl create secret docker-registry regcred \
+          --docker-server=https://index.docker.io/v1/ \
+          --docker-username=${{ secrets.DOCKER_HUB_USERNAME }} \
+          --docker-password=${{ secrets.DOCKER_HUB_PAT }} \
+          --docker-email=${{ secrets.DOCKER_HUB_EMAIL }} \
+          --dry-run=client -o yaml | kubectl apply -f -
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_PAT }}
+
+    - name: Verify Docker Image
+      run: |
+        echo "🔍 Verifying Docker image..."
+        echo "Docker image: ${{ env.FULL_DOCKER_IMAGE }}"
+        if ! docker pull ${{ env.FULL_DOCKER_IMAGE }}; then
+          echo "❌ Docker image not found!"
+          exit 1
+        fi
+        echo "✅ Docker image verified"
+
+    - name: Validate Helm Chart
+      run: |
+        echo "🔍 Validating Helm chart..."
+        helm lint ./devops/helm-chart-app
+        echo "✅ Helm chart validation passed"
+
+    - name: Deploy to EKS with Helm
+      run: |
+        echo "🚀 Deploying application with Helm..."
+        echo "Environment: ${{ env.ENVIRONMENT }}"
+        echo "Release name: ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }}"
+        echo "Values file: ./devops/helm-chart-app/values-${{ env.ENVIRONMENT }}.yaml"
+        echo "Docker image: ${{ env.FULL_DOCKER_IMAGE }}"
+
+        helm upgrade --install ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} ./devops/helm-chart-app \
+          -f ./devops/helm-chart-app/values-${{ env.ENVIRONMENT }}.yaml \
+          --wait --timeout=600s \
+          --set app.name=${{ env.APP_NAME }} \
+          --set image.repository=${{ vars.DOCKER_REPOSITORY || 'hftamayo/vanillatstodo' }} \
+          --set image.tag=${{ env.DOCKER_TAG }} \
+          --set app.environment=${{ env.ENVIRONMENT }}
+
+    - name: Wait for Deployment
+      run: |
+        echo "⏳ Waiting for Helm deployment to be ready..."
+
+        # Check deployment status
+        if ! kubectl rollout status deployment/${{ env.APP_NAME }} --timeout=10m; then
+          echo "❌ Deployment failed!"
           echo ""
-          echo "📊 Node Status:"
-          kubectl get nodes -o wide || echo "❌ No nodes found!"
+          echo "🔍 Helm Release Status:"
+          helm status ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }}
           echo ""
-          echo "📊 Node Groups (AWS):"
-          # List all nodegroups instead of hardcoding 'workers'
-          NODEGROUPS=$(aws eks list-nodegroups --cluster-name ${{ env.CLUSTER_NAME }} --query "nodegroups[0]" --output text 2>/dev/null || echo "")
-          if [ -n "$NODEGROUPS" ] && [ "$NODEGROUPS" != "None" ]; then
-            aws eks describe-nodegroup --cluster-name ${{ env.CLUSTER_NAME }} --nodegroup-name $NODEGROUPS || echo "❌ Nodegroup details unavailable!"
-          else
-            echo "❌ No nodegroups found!"
-          fi
+          echo "🔍 Deployment Details:"
+          kubectl describe deployment/${{ env.APP_NAME }}
           echo ""
+          echo "🔍 Pod Status:"
+          kubectl get pods -l app=${{ env.APP_NAME }} -o wide
+          echo ""
+          echo "🔍 Pod Events:"
+          kubectl describe pods -l app=${{ env.APP_NAME }}
+          echo ""
+          echo "🔍 Container Logs:"
+          kubectl logs -l app=${{ env.APP_NAME }} --tail=100 --all-containers=true
+          echo ""
+          echo "🔍 Helm Release History:"
+          helm history ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }}
+          exit 1
+        fi
 
-      - name: Save Current Deployment
-        run: |
-          if helm status ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} &>/dev/null; then
-            echo "📦 Saving current Helm release state..."
-            helm get values ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} > previous_values.yaml
-            echo "PREVIOUS_RELEASE_EXISTS=true" >> $GITHUB_ENV
-          else
-            echo "ℹ️ No existing Helm release found"
-            echo "PREVIOUS_RELEASE_EXISTS=false" >> $GITHUB_ENV
+    - name: Get Service Details
+      id: service
+      run: |
+        echo "⏳ Waiting for LoadBalancer..."
+        for i in {1..20}; do
+          EXTERNAL_IP=$(kubectl get svc ${{ env.APP_NAME }} -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
+          if [ -n "$EXTERNAL_IP" ]; then
+            echo "SERVICE_URL=${EXTERNAL_IP}" >> $GITHUB_ENV
+            echo "✅ Service URL: ${EXTERNAL_IP}"
+            break
           fi
+          echo "⏳ Waiting for external IP... (${i}/20)"
+          sleep 15
+        done
 
-      - name: Create Docker Hub Secret
-        run: |
-          echo "🔐 Setting up Docker credentials..."
-          kubectl create secret docker-registry regcred \
-            --docker-server=https://index.docker.io/v1/ \
-            --docker-username=${{ secrets.DOCKER_HUB_USERNAME }} \
-            --docker-password=${{ secrets.DOCKER_HUB_PAT }} \
-            --docker-email=${{ secrets.DOCKER_HUB_EMAIL }} \
-            --dry-run=client -o yaml | kubectl apply -f -
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PAT }}
-
-      - name: Verify Docker Image
-        run: |
-          echo "🔍 Verifying Docker image..."
-          echo "Docker image: ${{ env.FULL_DOCKER_IMAGE }}"
-          if ! docker pull ${{ env.FULL_DOCKER_IMAGE }}; then
-            echo "❌ Docker image not found!"
-            exit 1
+    - name: Verify Application Health
+      id: health_check
+      run: |
+        echo "⏳ Checking application health..."
+        for i in {1..10}; do
+          if curl -sf "http://${SERVICE_URL}/"; then
+            echo "✅ Application is healthy"
+            echo "health_status=healthy" >> $GITHUB_OUTPUT
+            break
           fi
-          echo "✅ Docker image verified"
+          echo "⏳ Waiting for application to be ready... (${i}/10)"
+          sleep 30
+        done
 
-      - name: Validate Helm Chart
-        run: |
-          echo "🔍 Validating Helm chart..."
-          helm lint ./devops/helm-chart
-          echo "✅ Helm chart validation passed"
+    - name: Rollback on Failure
+      if: failure() && env.PREVIOUS_RELEASE_EXISTS == 'true'
+      run: |
+        echo "🔄 Rolling back Helm release..."
+        helm rollback ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} 0
+        kubectl rollout status deployment/${{ env.APP_NAME }} --timeout=5m
 
-      - name: Deploy to EKS with Helm
-        run: |
-          echo "🚀 Deploying application with Helm..."
-          echo "Environment: ${{ env.ENVIRONMENT }}"
-          echo "Release name: ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }}"
-          echo "Values file: ./devops/helm-chart/values-${{ env.ENVIRONMENT }}.yaml"
-          echo "Docker image: ${{ env.FULL_DOCKER_IMAGE }}"
-
-          helm upgrade --install ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} ./devops/helm-chart \
-            -f ./devops/helm-chart/values-${{ env.ENVIRONMENT }}.yaml \
-            --wait --timeout=600s \
-            --set app.name=${{ env.APP_NAME }} \
-            --set image.repository=${{ vars.DOCKER_REPOSITORY || 'hftamayo/vanillatstodo' }} \
-            --set image.tag=${{ env.DOCKER_TAG }} \
-            --set app.environment=${{ env.ENVIRONMENT }}
-
-      - name: Wait for Deployment
-        run: |
-          echo "⏳ Waiting for Helm deployment to be ready..."
-
-          # Check deployment status
-          if ! kubectl rollout status deployment/${{ env.APP_NAME }} --timeout=10m; then
-            echo "❌ Deployment failed!"
-            echo ""
-            echo "🔍 Helm Release Status:"
-            helm status ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }}
-            echo ""
-            echo "🔍 Deployment Details:"
-            kubectl describe deployment/${{ env.APP_NAME }}
-            echo ""
-            echo "🔍 Pod Status:"
-            kubectl get pods -l app=${{ env.APP_NAME }} -o wide
-            echo ""
-            echo "🔍 Pod Events:"
-            kubectl describe pods -l app=${{ env.APP_NAME }}
-            echo ""
-            echo "🔍 Container Logs:"
-            kubectl logs -l app=${{ env.APP_NAME }} --tail=100 --all-containers=true
-            echo ""
-            echo "🔍 Helm Release History:"
-            helm history ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }}
-            exit 1
-          fi
-
-      - name: Get Service Details
-        id: service
-        run: |
-          echo "⏳ Waiting for LoadBalancer..."
-          for i in {1..20}; do
-            EXTERNAL_IP=$(kubectl get svc ${{ env.APP_NAME }} -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
-            if [ -n "$EXTERNAL_IP" ]; then
-              echo "SERVICE_URL=${EXTERNAL_IP}" >> $GITHUB_ENV
-              echo "✅ Service URL: ${EXTERNAL_IP}"
-              break
-            fi
-            echo "⏳ Waiting for external IP... (${i}/20)"
-            sleep 15
-          done
-
-      - name: Verify Application Health
-        id: health_check
-        run: |
-          echo "⏳ Checking application health..."
-          for i in {1..10}; do
-            if curl -sf "http://${SERVICE_URL}/"; then
-              echo "✅ Application is healthy"
-              echo "health_status=healthy" >> $GITHUB_OUTPUT
-              break
-            fi
-            echo "⏳ Waiting for application to be ready... (${i}/10)"
-            sleep 30
-          done
-
-      - name: Rollback on Failure
-        if: failure() && env.PREVIOUS_RELEASE_EXISTS == 'true'
-        run: |
-          echo "🔄 Rolling back Helm release..."
-          helm rollback ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} 0
-          kubectl rollout status deployment/${{ env.APP_NAME }} --timeout=5m
-
-      - name: Deployment Summary
-        if: always()
-        run: |
-          echo "### 🚀 Helm Deployment Status" >> $GITHUB_STEP_SUMMARY
-          echo "| Component | Status | Details |" >> $GITHUB_STEP_SUMMARY
-          echo "| --------- | ------ | ------- |" >> $GITHUB_STEP_SUMMARY
-          echo "| Cluster | ${{ job.status }} | ${{ env.CLUSTER_NAME }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Environment | ${{ env.ENVIRONMENT }} | ${{ env.AWS_REGION }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Release Name | ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} | Helm Release |" >> $GITHUB_STEP_SUMMARY
-          echo "| Values File | values-${{ env.ENVIRONMENT }}.yaml | Configuration |" >> $GITHUB_STEP_SUMMARY
-          echo "| Service URL | ${{ env.SERVICE_URL || 'N/A' }} | LoadBalancer |" >> $GITHUB_STEP_SUMMARY
-          echo "| Image | ✅ | ${{ env.FULL_DOCKER_IMAGE }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Deployment Method | Helm | Security Enhanced |" >> $GITHUB_STEP_SUMMARY
-          echo "| Health Check | ${{ steps.health_check.outputs.health_status || 'N/A' }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Rollback Status | ${{ job.status == 'failure' && env.PREVIOUS_RELEASE_EXISTS == 'true' && 'Applied' || 'Not Required' }} |" >> $GITHUB_STEP_SUMMARY
-
+    - name: Deployment Summary
+      if: always()
+      run: |
+        echo "### 🚀 Helm Deployment Status" >> $GITHUB_STEP_SUMMARY
+        echo "| Component | Status | Details |" >> $GITHUB_STEP_SUMMARY
+        echo "| --------- | ------ | ------- |" >> $GITHUB_STEP_SUMMARY
+        echo "| Cluster | ${{ job.status }} | ${{ env.CLUSTER_NAME }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Environment | ${{ env.ENVIRONMENT }} | ${{ env.AWS_REGION }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Release Name | ${{ env.APP_NAME }}-${{ env.ENVIRONMENT }} | Helm Release |" >> $GITHUB_STEP_SUMMARY
+        echo "| Values File | values-${{ env.ENVIRONMENT }}.yaml | Configuration |" >> $GITHUB_STEP_SUMMARY
+        echo "| Service URL | ${{ env.SERVICE_URL || 'N/A' }} | LoadBalancer |" >> $GITHUB_STEP_SUMMARY
+        echo "| Image | ✅ | ${{ env.FULL_DOCKER_IMAGE }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Deployment Method | Helm | Security Enhanced |" >> $GITHUB_STEP_SUMMARY
+        echo "| Health Check | ${{ steps.health_check.outputs.health_status || 'N/A' }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Rollback Status | ${{ job.status == 'failure' && env.PREVIOUS_RELEASE_EXISTS == 'true' && 'Applied' || 'Not Required' }} |" >> $GITHUB_STEP_SUMMARY
     # - name: Create Route 53 Record
     #   run: |
     #     aws route53 change-resource-record-sets --hosted-zone-id <YOUR_HOSTED_ZONE_ID> --change-batch '{
