--- a/devops/argocd/applicationset.yaml
+++ b/devops/argocd/applicationset.yaml
@@ -11,23 +11,8 @@ spec:
   - list:
       elements:
       - env: experimental
-        replicas: "1"
-        resources:
-          cpu: "100m"
-          memory: "128Mi"
-        monitoring: "false"
       - env: staging
-        replicas: "2"
-        resources:
-          cpu: "200m"
-          memory: "256Mi"
-        monitoring: "true"
       - env: production
-        replicas: "3"
-        resources:
-          cpu: "500m"
-          memory: "512Mi"
-        monitoring: "true"
 
   template:
     metadata:
@@ -37,21 +22,7 @@ spec:
       source:
         repoURL: https://github.com/hftamayo/vanillatstodo
         targetRevision: HEAD
-        path: devops/helm-chart-app
-        helm:
-          valueFiles:
-          - values.yaml
-          parameters:
-          - name: "app.environment"
-            value: "{{env}}"
-          - name: "deployment.replicas"
-            value: "{{replicas}}"
-          - name: "resources.requests.cpu"
-            value: "{{resources.cpu}}"
-          - name: "resources.requests.memory"
-            value: "{{resources.memory}}"
-          - name: "monitoring.enabled"
-            value: "{{monitoring}}"
+        path: devops/kustomize-app/overlays/{{env}}
       destination:
         server: https://kubernetes.default.svc
         namespace: 'vanillatstodo-{{env}}'
