adding chart metadata definitions

--- a/devops/config/global.env
+++ b/devops/config/global.env
@@ -31,3 +31,8 @@ DEFAULT_CPU_LIMIT=500m
 DEFAULT_MEMORY_LIMIT=512Mi
 DEFAULT_CPU_REQUEST=100m
 DEFAULT_MEMORY_REQUEST=128Mi
+
+# Chart Metadata
+PROJECT_DESCRIPTION=A Vanilla TypeScript Todo Application
+MAINTAINER_NAME=hftamayo
+MAINTAINER_EMAIL=hftamayo@gmail.com
