--- a/devops/helm-chart-monitoring/values-experimental.yaml
+++ b/devops/helm-chart-monitoring/values-experimental.yaml
@@ -14,7 +14,9 @@ prometheus-stack:
           cpu: 300m
           memory: 1Gi
   grafana:
-    adminPassword: "admin123"
+    # Admin password will be injected by GitHub Actions via:
+    # --set prometheus-stack.grafana.adminPassword=${{ secrets.GRAFANA_PWD }}
+    adminPassword: ""
     service:
       type: LoadBalancer
 
