updating deploy iac with IODC auth

--- a/.github/workflows/deploy_iac_aws.yml
+++ b/.github/workflows/deploy_iac_aws.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Configure AWS credentials
+      - name: Configure AWS credentials (Initial - for IAM setup)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -144,6 +144,22 @@ jobs:
             -var="project_name=${{ env.PROJECT_NAME }}" \
             -var="environment=${{ env.ENVIRONMENT }}" \
             -var="cluster_role_name=${{ env.EKS_CLUSTER_ROLE }}"
+
+      - name: Deploy IAM Resources (GitHub Actions OIDC)
+        id: iam
+        run: |
+          cd devops/terraform/04_iam
+          terraform init -reconfigure \
+            -backend-config="bucket=${{ env.BUCKET_NAME }}" \
+            -backend-config="key=${{ env.ENVIRONMENT }}/iam/terraform.tfstate" \
+            -backend-config="region=${{ env.AWS_REGION }}" \
+            -backend-config="encrypt=true"
+          terraform apply -auto-approve \
+            -var="aws_region=${{ env.AWS_REGION }}" \
+            -var="project_name=${{ env.PROJECT_NAME }}" \
+            -var="environment=${{ env.ENVIRONMENT }}" \
+            -var="github_owner=hftamayo" \
+            -var="github_repo=vanillatstodo"
 
       - name: Deploy Monitoring Resources
         id: monitoring
@@ -283,6 +299,28 @@ jobs:
             --query "cluster.endpoint" \
             --output text)
           echo "cluster_endpoint=${ENDPOINT}" >> $GITHUB_OUTPUT
+
+      - name: Export IAM Role ARN
+        id: iam_output
+        if: success()
+        run: |
+          cd devops/terraform/04_iam
+          ROLE_ARN=$(terraform output -raw github_actions_role_arn)
+          echo "github_actions_role_arn=${ROLE_ARN}" >> $GITHUB_OUTPUT
+          echo "✅ GitHub Actions Role ARN: ${ROLE_ARN}"
+
+      - name: Switch to OIDC Authentication
+        if: success()
+        run: |
+          echo "🔄 Switching from access keys to OIDC authentication..."
+          echo "Role ARN: ${{ steps.iam_output.outputs.github_actions_role_arn }}"
+
+      - name: Configure AWS credentials (OIDC)
+        if: success()
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ steps.iam_output.outputs.github_actions_role_arn }}
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Generate Resource Summary
         id: resource_summary
